--- a/res/layout/activity_shess_board.xml
+++ b/res/layout/activity_shess_board.xml
@@ -13,6 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="5"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:background="@color/colorBoard">
 
     </FrameLayout>
