Fixed project. Remove "stop button"

--- a/res/layout/activity_shess_board.xml
+++ b/res/layout/activity_shess_board.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.LinearLayoutCompat
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,6 +13,7 @@
         android:layout_height="match_parent"
         android:layout_weight="5"
         android:focusableInTouchMode="true"
+        android:layout_gravity="center"
         android:background="@color/colorBoard">
 
     </FrameLayout>
@@ -35,7 +35,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="2"
-                android:text="5"
+                android:minEms="1"
+                android:text="@string/minCellAndColValue"
                 android:layout_weight="1"
                 android:inputType="number" />
 
@@ -44,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="5"
+                android:text="@string/minCellAndColValue"
                 android:ems="2"
                 android:inputType="number" />
         </LinearLayout>
@@ -66,13 +67,6 @@
             android:layout_height="50dp"
             android:enabled="false"
             android:text="@string/button_start" />
-
-        <Button
-            android:id="@+id/buttonStop"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:enabled="false"
-            android:text="@string/button_stop" />
 
     </LinearLayout>
 
