--- a/res/layout/activity_shess_board.xml
+++ b/res/layout/activity_shess_board.xml
@@ -12,8 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="5"
-        android:focusableInTouchMode="true"
-        android:layout_gravity="center"
         android:background="@color/colorBoard">
 
     </FrameLayout>
@@ -25,6 +23,30 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:background="@color/colorBackground">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:text="@string/chess_board_text_view" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:text="@string/cell_text_view"
+                android:layout_weight="1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/col_text_view"
+                android:textAlignment="center" />
+        </LinearLayout>
 
         <LinearLayout
         android:layout_width="match_parent"
@@ -35,6 +57,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:ems="2"
+                android:textAlignment="center"
                 android:minEms="1"
                 android:text="@string/minCellAndColValue"
                 android:layout_weight="1"
@@ -45,7 +68,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:minEms="1"
                 android:text="@string/minCellAndColValue"
+                android:textAlignment="center"
                 android:ems="2"
                 android:inputType="number" />
         </LinearLayout>
