--- a/res/layout/activity_shess_board.xml
+++ b/res/layout/activity_shess_board.xml
@@ -27,7 +27,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:text="@string/chess_board_text_view" />
+            android:text="@string/chess_board_text_view"
+            android:layout_marginTop="5dp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
