--- a/res/layout/activity_shess_board.xml
+++ b/res/layout/activity_shess_board.xml
@@ -30,26 +30,7 @@
             android:text="@string/chess_board_text_view"
             android:layout_marginTop="5dp"
             android:textStyle="bold"
-            android:layout_marginBottom="10dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:text="@string/cell_text_view"
-                android:layout_weight="1" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/col_text_view"
-                android:textAlignment="center" />
-        </LinearLayout>
+            android:layout_marginBottom="6dp"/>
 
         <LinearLayout
         android:layout_width="match_parent"
@@ -61,16 +42,22 @@
                 android:layout_height="wrap_content"
                 android:ems="2"
                 android:textAlignment="center"
-                android:minEms="1"
+                android:minEms="3"
                 android:text="@string/minCellAndColValue"
                 android:layout_weight="1"
                 android:inputType="number" />
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/text_view"
+                android:textAlignment="center"
+                android:textStyle="bold"/>
             <EditText
                 android:id="@+id/editTextNumCell"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="3"
                 android:minEms="1"
                 android:text="@string/minCellAndColValue"
                 android:textAlignment="center"
